--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,12 @@ body{
     overflow: hidden;
     background-color: black;
     height: 100%;
+    padding-bottom: 10px;
+    overflow: visible
+    
 }
+
+
 
 .container{
     position: absolute;
@@ -20,14 +25,52 @@ body{
     height: 100vh;
 }
 
+.progress {
+    margin:20px auto;
+    padding:0;
+    width:25%;
+    height:30px;
+    overflow:hidden;
+    background:#e5e5e5;
+    border-radius:6px;
+    margin-top: 40vh;
+    margin-left: 22vw;
+  }
+  
+  .bar {
+    position:relative;
+    float:left;
+    min-width:1%;
+    height:100%;
+    background-image:linear-gradient(.15turn, gray, 10%, #FF9900);
+  }
+  
+  .percent {
+      position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    margin:0;
+    font-family:tahoma,arial,helvetica;
+    font-size:12px;
+    color:white;
+  }
+
+.tree {
+    float: right;
+    max-height: 400px;
+    margin-right: 10vw;
+    margin-top: -2vw;
+}
 .nav-menu{
     display: flex;
     justify-content: flex-end;
     padding: 0.5rem 1rem;
+    background-color: rgb(255, 153, 0, 0.6);
 }
 
 .nav-items{
-    padding: 0.5rem 1rem;
+    padding: 0.3rem 1rem;
     list-style: none;
     margin-right: 1rem;
 }
@@ -39,13 +82,21 @@ body{
     font-weight: 200;
 }
 
+.nav-items:hover {
+    transform: scale(1.2);
+    z-index: 2;
+    filter: none;
+    transition: 0.5s;
+}
+
 .title-container{
-    position: absolute;
+    position: absolute; 
     width: 50%;
     height: auto;
-    top: 50%;
-    left: 0%;
+    top: 60%;
+    left: 10%;
     transform: translate(0.5em, -12em);
+    margin-left: 10vw;
 }
 
 .title{
@@ -56,7 +107,8 @@ body{
 .title h1{
     text-transform: uppercase;
     font-family: 'Poppins', sans-serif;
-    font-weight: 700;
+    font-weight: 500;
+    
 }
 
 .title p{
@@ -226,6 +278,8 @@ label {
         margin-top: 1.7rem;
         font-size: 0.8rem;
     }
+
+    
 }
 
 @media only screen and (max-width: 1000px){
