--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 body {
     overflow: hidden;
-    background-color: black;
+    background-color: white;
     height: 100%;
     padding-bottom: 10px;
     overflow: visible
@@ -16,26 +17,27 @@ body {
     height: 100vh;
 }
 
-#progress {
-    /* margin: 20px auto; */
-    padding: 0;
-    width: 65%;
-    height: 30px;
-    overflow: hidden;
-    background: #e5e5e5;
-    border-radius: 6px;
-    /* margin-top: 40vh;
-    margin-left: 22vw; */
-
+.progress {
+	background-color: #d8d8d8;
+	border-radius: 20px;
+	position: relative;
+	margin: 15px 0;
+	height: 30px;
+	width: 300px;
 }
 
-#bar {
-    position: relative;
-    float: left;
-    min-width: 1%;
-    height: 100%;
-    width: 99%;
-    background-image: linear-gradient(.15turn, gray, 10%, #FF9900);
+.progress-done {
+	background: linear-gradient(to left, #F2709C, #FF9472);
+	box-shadow: 0 3px 3px -5px #F2709C, 0 2px 5px #F2709C;
+	border-radius: 20px;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	width: 0;
+	opacity: 0;
+	transition: 1s ease 0.3s;
 }
 
 #percent {
@@ -114,18 +116,6 @@ body {
     margin: 1em 0.5em;
 }
 
-.btn {
-    padding: 0.5rem 1rem;
-    margin-top: 1rem;
-    border: none;
-    border-radius: 3rem;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    cursor: pointer;
-    text-transform: uppercase;
-    background-color: rgb(0, 114, 255);
-    color: white;
-}
 
 
 /*** making responsive ****/
