--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 
 body {
     overflow: hidden;
-    background-color: white;
+    background-color: black;
     height: 100%;
     padding-bottom: 10px;
     overflow: visible
